# immortalwrt-mt798x

./: .gitignore  README.md  feeds.conf.default
config/: Config-build.in
defconfig/: mt7981-ax3000-mtwifi-cfg.config  mt7981-ax3000.config  mt7986-BPI-R3-mt_wifi-cfg.config  mt7986-ax4200-bpir3_mini.config  mt7986-ax4200-mtwifi-cfg.config  mt7986-ax4200.config  mt7986-ax6000-256m.config  mt7986-ax6000-emmc.config  mt7986-ax6000-mtwifi-cfg.config  mt7986-ax6000.config  mt7986-ax7800.config
defconfig/luci-app-mtk-deprecated/: mt7981-ax3000.config  mt7986-ax4200.config  mt7986-ax6000-256m.config  mt7986-ax6000.config
dl/: datconf-757f9679.tar.bz2  mt7981_conninfra_20220425-bbf588-obj.tar.xz  mt7981_warp-20220907-791160-obj.tar.xz  mt7981_warp-20221209-3e6ae1-obj.tar.xz  mt7986_conninfra-bbf588-obj.tar.xz  mt7986_warp-20220907-791160-obj.tar.xz  mt7986_warp-20221209-3e6ae1-obj.tar.xz  mt79xx_conninfra_20231229-f2fa25.tar.xz  warp_20231229-5f71ec.tar.xz
include/: feeds.mk  image-commands.mk  image.mk  kernel-version.mk  netfilter.mk  target.mk
package/: Makefile
package/base-files/: Makefile
package/boot/uboot-envtools/files/: mediatek
package/emortal/autocore/: Makefile
package/emortal/default-settings/files/: 99-default-settings
package/firmware/bpir3_mini-properties/: Makefile
package/firmware/bpir3_mini-properties/files/: ltecalling.init
package/kernel/linux/files/: sysctl-nf-conntrack.conf
package/kernel/linux/modules/: block.mk  netdevices.mk  netfilter.mk
package/libs/gettext-full/patches/: 160-fix-build-error.patch
package/libs/openssl/: Config.in
package/mtk/applications/8021xd/: Makefile
package/mtk/applications/datconf/: Makefile
package/mtk/applications/luci-app-eqos-mtk/: Makefile
package/mtk/applications/luci-app-mtk/: Makefile
package/mtk/applications/mtkhqos_util/: Makefile
package/mtk/applications/mtwifi-cfg/: Makefile
package/mtk/applications/switch/: Makefile
package/mtk/drivers/conninfra/: Makefile
package/mtk/drivers/mt_wifi/: Makefile  config.in
package/mtk/drivers/warp/: Makefile  config.in
package/mtk/drivers/wifi-profile/: Config.in  Makefile
package/network/utils/iptables/: Makefile
package/system/fstools/: Makefile
package/system/fstools/src/: CMakeLists.txt  block.c  blockd.c  jffs2reset.c  mount_root.c  probe-libblkid.c  probe.c  probe.h  snapshot.c  ubi.c
package/system/fstools/src/libblkid-tiny/: blkid.h  blkidP.h  btrfs.c  c.h  encode.c  encode.h  exfat.c  ext.c  hfs.c  jffs2.c  libblkid-tiny.c  libblkid-tiny.h  mkdev.c  ntfs.c  probe.c  squashfs.c  superblocks.h  vfat.c
package/system/fstools/src/libfstools/: common.c  common.h  extroot.c  find.c  libfstools.h  mount.c  mtd.c  overlay.c  partname.c  rootdisk.c  snapshot.c  snapshot.h  ubi.c  volume.c  volume.h
package/system/fstools/src/libubi/: libubi-tiny.c  libubi-tiny.h  libubi.c  libubi.h  ubi-user.h  ubiutils-common.c
scripts/: mkits.sh
toolchain/gcc/: common.mk
tools/: Makefile
tools/crc32sum/: Makefile
tools/crc32sum/src/: Makefile  crc32sum.c
tools/firmware-utils/src/: ptgen.c
(+152 files in other folders)
